css/main.css
/* ... */
/* This gets Facebook to fall into place */
.social-share iframe {
  vertical-align: middle;
}
/* Set an optional width for your button wrappers */
.social-share div,
.social-share span {
  display: inline-block;
  /* width: 110px; */
  /* padding: 0 5px; */
  padding-bottom: 10px;
  vertical-align: middle;
}

.social-share .twitter {
  padding-right: 30px;
}
.social-share .facebook {
  padding-right: 40px;
}
.social-share .linkedin {
  /* padding: 0 1px; */
  text-align: left;
  /* height: 21px;
  width: 110px; */
}

/* --- Table of Contents --- */

ul#markdown-toc:before {
  content: "Coming up:";
}
ul#markdown-toc {
/* small */
  font-size: 85%;
/* panel panel-default */
  border: 1px solid transparent;
  border-color: #ddd;
  border-radius: 4px;
  box-shadow: 0 1px 1px rgba(0,0,0,.05);
}

/* --- Fixes --- */

a .fa-stack {
  color: #404040; /* matches footer a */
}

/* --- Other additions --- */

.golden-width {
  width: 61.8%;
}
/* a height that will fit the screen height */
.height-fits {
  height: 500px;
}

.lg-screen-width {
  width: min(100vw, 1400px);
  left: calc(-1*(min(100vw, 1400px))/2 + 50%);
}
.full-screen-width {
  width: 100vw;
  left: calc(-50vw + 50%);
}
.lg-screen-width,
.full-screen-width {
  padding-left: 2%;
  padding-right: 2%;
  position: relative;
}

